fixes #21: use glyph font for callout icons

--- a/belis-app/Info.plist
+++ b/belis-app/Info.plist
@@ -28,6 +28,10 @@
 	<string>BelIS-App möchte Ihren Standort verwenden.</string>
 	<key>NSLocationWhenInUsageDescription</key>
 	<string>BelIS-App möchte Ihren Standort verwenden.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>webhostinghub-glyphs.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
