--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ DerivedData
 *.ipa
 *.xcuserstate
 
+belis-app/Secrets.swift
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
