--- a/belis-app/Info.plist
+++ b/belis-app/Info.plist
@@ -4,6 +4,27 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeIconFiles</key>
+			<array>
+				<string>belis-app/Images.xcassets/AppIcon.appiconset/Icon-60@3x.png</string>
+				<string>belis-app/Images.xcassets/AppIcon.appiconset/Icon-40.png</string>
+				<string>belis-app/Images.xcassets/AppIcon.appiconset/Icon-Small.png</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Belis Certificate Import</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>de.cismet.cids.belis.mobile.clientcert</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -52,6 +73,26 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Belis Certificate Import</string>
+			<key>UTTypeIdentifier</key>
+			<string>de.cismet.cids.belis.mobile.clientcert</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>beliscc</string>
+				</array>
+			</dict>
+		</dict>
 	</array>
 </dict>
 </plist>
