working on #40: final steps for the client side certificate based verification

--- a/belis-app/Info.plist
+++ b/belis-app/Info.plist
@@ -12,9 +12,10 @@
 				<string>belis-app/Images.xcassets/AppIcon.appiconset/Icon-60@3x.png</string>
 				<string>belis-app/Images.xcassets/AppIcon.appiconset/Icon-40.png</string>
 				<string>belis-app/Images.xcassets/AppIcon.appiconset/Icon-Small.png</string>
+				<string>belis-app/Images.xcassets/AppIcon.appiconset/Icon-76@2x.png</string>
 			</array>
 			<key>CFBundleTypeName</key>
-			<string>Belis Certificate Import</string>
+			<string>Belis Client Certificate Import</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>LSHandlerRank</key>
@@ -22,6 +23,22 @@
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>de.cismet.cids.belis.mobile.clientcert</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeIconFiles</key>
+			<array>
+				<string>belis-app/Images.xcassets/AppIcon.appiconset/Icon-76@2x.png</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Belis Server Certificate Import</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>de.cismet.cids.belis.mobile.servercert</string>
 			</array>
 		</dict>
 	</array>
@@ -82,7 +99,7 @@
 				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
-			<string>Belis Certificate Import</string>
+			<string>Belis Client Certificate Import</string>
 			<key>UTTypeIdentifier</key>
 			<string>de.cismet.cids.belis.mobile.clientcert</string>
 			<key>UTTypeTagSpecification</key>
@@ -90,6 +107,23 @@
 				<key>public.filename-extension</key>
 				<array>
 					<string>beliscc</string>
+				</array>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Belis Server Certificate Import</string>
+			<key>UTTypeIdentifier</key>
+			<string>de.cismet.cids.belis.mobile.servercert</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>belissc</string>
 				</array>
 			</dict>
 		</dict>
