--- a/prerelease.plist
+++ b/prerelease.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://cismet.github.io/belis-app/belis-app.ipa</string>
+					<string>https://cismet.github.io/belis-app/belis-app.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
