--- a/preview/prerelease.plist
+++ b/preview/prerelease.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://cismet.github.io/belis-app/preview/belis-app.ipa</string>
+					<string>https://github.com/cismet/belis-app/releases/download/v0.9.0.pre/belis-app.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
