--- a/preview/prerelease.plist
+++ b/preview/prerelease.plist
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>items</key>
-	<array>
-		<dict>
-			<key>assets</key>
-			<array>
-				<dict>
-					<key>kind</key>
-					<string>software-package</string>
-					<key>url</key>
-					<string>https://github.com/cismet/belis-app/releases/download/v0.12.8/belis-app.ipa</string>
-				</dict>
-			</array>
-			<key>metadata</key>
+	<dict>
+		<key>items</key>
+		<array>
 			<dict>
-				<key>bundle-identifier</key>
-				<string>de.cismet.cids.belis.mobile.belis-app</string>
-				<key>bundle-version</key>
-				<string>0.1.2</string>
-				<key>kind</key>
-				<string>software</string>
-				<key>title</key>
-				<string>belis-app</string>
+				<key>assets</key>
+				<array>
+					<dict>
+						<key>kind</key>
+						<string>software-package</string>
+						<key>url</key>
+						<string>https://github.com/cismet/belis-app/releases/download/v0.12.9/BelIS.ipa</string>
+					</dict>
+				</array>
+				<key>metadata</key>
+				<dict>
+					<key>bundle-identifier</key>
+					<string>de.cismet.cids.belis.mobile.belis-app</string>
+					<key>bundle-version</key>
+					<string>0.1.2</string>
+					<key>kind</key>
+					<string>software</string>
+					<key>title</key>
+					<string>belis-app</string>
+				</dict>
 			</dict>
-		</dict>
-	</array>
-</dict>
+		</array>
+	</dict>
 </plist>
